unified_tests/build_pipeline/file_role_error_with_import_resolution_error/expect/build.text.stderr
lib.test.copp:3:9: error: visible declarations are not allowed in .test.copp files
  visible function run() -> nil {
          ^
